--- a/Atividades Práticas/Atividade 1/sucessoCadastro.html
+++ b/Atividades Práticas/Atividade 1/sucessoCadastro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>PRINCIPAL</title>
+		<title>SUCESSO</title>
 
 		<link rel="stylesheet" href="estilos.css">
 	</head>
@@ -10,18 +10,16 @@
 		<img src="./ufoplogo.jpg" alt="Logo da UFOP">
 
 		<div class="geral">
-			<a href="cadastro.html">Cadastro</a><br>
-			<a href="matricula.html">Matrícula</a><br>
-			<a href="listaPresenca.html">Lista de Presença</a><br>
-			<a href="tabela.html">Tabela</a><br>
-			<a href="contato.html">Contato</a>
+			
+			<h1>Cadastro realizado com sucesso!</h1>
+
+			<a href="cadastro.html">Voltar</a><br><br><br>
 
 			<footer class="footer">
 				Universidade Federal de Ouro Preto - Carla Sanches Nere dos Santos - 15.1.8349 - carlasanches8@gmail.com
-			</footer>
-		</div>
-		
-		
+			</footer>	
+
+		</div>				
 
 	</body>
 </html>
