--- a/Atividades Práticas/Atividade 1/sucessoMatricula.html
+++ b/Atividades Práticas/Atividade 1/sucessoMatricula.html
@@ -11,9 +11,9 @@
 
 		<div class="geral">
 			
-			<h1>Cadastro realizado com sucesso!</h1>
+			<h1>Matrícula realizada com sucesso!</h1>
 
-			<a href="cadastro.html">Voltar</a><br><br><br>
+			<a href="matricula.html">Voltar</a><br><br><br>
 
 			<footer class="footer">
 				Universidade Federal de Ouro Preto - Carla Sanches Nere dos Santos - 15.1.8349 - carlasanches8@gmail.com
