--- a/Atividades Práticas/Atividade 1/listaPresenca.html
+++ b/Atividades Práticas/Atividade 1/listaPresenca.html
@@ -13,7 +13,7 @@
 
 			<div class="geral">
 
-				<table border="1" width="50%" align="center" class="table-striped">
+				<table border="1" width="50%" align="center" class="table-striped table">
 					<caption>Sistemas Web I</caption>
 					
 					<thead>
