--- a/Atividades Práticas/Atividade 1/sucessoMatricula.html
+++ b/Atividades Práticas/Atividade 1/sucessoMatricula.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>SUCESSO!</title>
 
+		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 		<link rel="stylesheet" href="estilos.css">
 	</head>
 	<body>
