--- a/Atividades Práticas/Atividade 1/index.html
+++ b/Atividades Práticas/Atividade 1/index.html
@@ -11,11 +11,14 @@
 		<img src="./ufoplogo.jpg" alt="Logo da UFOP">
 
 		<div class="geral">
-			<a href="cadastro.html">Cadastro</a><br>
-			<a href="matricula.html">Matrícula</a><br>
-			<a href="listaPresenca.html">Lista de Presença</a><br>
-			<a href="tabela.html">Tabela</a><br>
-			<a href="contato.html">Contato</a>
+
+			<div class="vertical-menu">
+				<a href="cadastro.html">Cadastro</a>
+				<a href="matricula.html">Matrícula</a>
+				<a href="listaPresenca.html">Lista de Presença</a>
+				<a href="tabela.html">Tabela</a>
+				<a href="contato.html">Contato</a>
+			</div>
 
 			<footer class="footer">
 				Universidade Federal de Ouro Preto - Carla Sanches Nere dos Santos - 15.1.8349 - carlasanches8@gmail.com
