--- a/Atividades Práticas/Atividade 2/didatica.html
+++ b/Atividades Práticas/Atividade 2/didatica.html
@@ -222,10 +222,10 @@
 					</div>	
 
 					<div class="col-md-6">
-						<button type="button" class="btn btn-default">CÍRCULO</button>
-						<button type="button" class="btn btn-default">QUADRADO</button>
-						<button type="button" class="btn btn-default">RETÂNGULO</button>
-						<button type="button" class="btn btn-default">TRIÂNGULO</button>						
+						<br><br><br><button type="button" class="btn btn-default" name="circuloB">CÍRCULO</button>
+						<br><br><br><br><br><br><br><br><button type="button" class="btn btn-default" name="quadradoB">QUADRADO</button>
+						<br><br><br><br><br><br><br><br><button type="button" class="btn btn-default" name="retanguloB">RETÂNGULO</button>
+						<br><br><br><br><br><br><br><br><button type="button" class="btn btn-default" name="trianguloB">TRIÂNGULO</button>						
 					</div>
 
 				
